lab18-kubernetes-gateway-api/01-gateway.yaml
# ============================================================
# Lab 18 — Gateway API: Step 1 — Gateway
# ============================================================
# Istio provides the GatewayClass named "istio".
# This Gateway uses Istio as its Gateway controller.
#
# The Gateway listens on:
#   HTTP  → port 80
#   HTTPS → port 443
# ============================================================

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: gateway-lab
  annotations:
    networking.istio.io/service-type: NodePort

spec:
  gatewayClassName: istio

  listeners:

    # HTTP listener
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    # HTTPS listener
    - name: https
      protocol: HTTPS
      port: 443

      tls:
        mode: Terminate
        certificateRefs:
          - name: shared-gateway-tls
            kind: Secret

      allowedRoutes:
        namespaces:
          from: All
